--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/testing": "^11.1.6",
+    "@nestjsx/crud": "5.0.0-alpha.3",
+    "@nestjsx/crud-typeorm": "5.0.0-alpha.3",
     "@prisma/client": "^6.17.1",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
