--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@types/node": "^24.7.2",
     "@types/supertest": "^6.0.3",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "commander": "^14.0.1",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
